# SimpleThreadPool

./: .gitignore  CMakeLists.txt  Makefile  README.md  simpleThreadPool.hpp  tests.cpp
.github/workflows/: compileAndRunTests.yml
cmake/: brutal-compiler-options.cmake  doxy.cmake  grind.cmake  sanitize.cmake  static-analysis.cmake
docs/: Doxyfile
examples/: CMakeLists.txt  example_01.cpp
gh_pages/: index.html
include/: CMakeLists.txt
include/SimpleThreadPool/: simpleThreadPool.hpp
include/simpleThreadPool/: simpleThreadPool.hpp
tests/: CMakeLists.txt  tests.cpp
