if(ENABLE_TESTING)
    set(SIMPLETHREADPOOL_TEST_SOURCES "tests.cpp")

    set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
    set(THREADS_PREFER_PTHREAD_FLAG TRUE)
    find_package(Threads REQUIRED)

    foreach(SIMPLETHREADPOOL_SOURCE IN LISTS SIMPLETHREADPOOL_TEST_SOURCES)
        get_filename_component(SIMPLETHREADPOOL_TEST_NAME ${SIMPLETHREADPOOL_SOURCE} NAME_WLE)
        # message(STATUS "Creating test: " ${SIMPLETHREADPOOL_TEST_NAME} " from source: " ${SIMPLETHREADPOOL_SOURCE})
        
        add_executable(${SIMPLETHREADPOOL_TEST_NAME} ${SIMPLETHREADPOOL_SOURCE})
        target_link_libraries(${SIMPLETHREADPOOL_TEST_NAME} PUBLIC Threads::Threads
                                                  simpleThreadPool)
        # add_test(NAME ${SIMPLETHREADPOOL_TEST_NAME} COMMAND ${SIMPLETHREADPOOL_TEST_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
        add_test(NAME ${SIMPLETHREADPOOL_TEST_NAME} COMMAND ${SIMPLETHREADPOOL_TEST_NAME})

        if(ENABLE_COVERAGE_REPORT)
            target_code_coverage(${SIMPLETHREADPOOL_TEST_NAME} AUTO ALL)
        endif()
    endforeach()
endif()
